[project]
name = "uv0717-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "bcrypt>=4.2.1",
    "cryptography>=44.0.0",
    "databases>=0.9.0",
    "fastapi>=0.115.8",
    "google-analytics-admin>=0.23.3",
    "google-analytics-data>=0.18.16",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.38.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "matplotlib>=3.10.1",
    "passlib>=1.7.4",
    "proto-plus>=1.26.0",
    "protobuf>=5.29.3",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "sqlalchemy>=2.0.37",
    "tzdata>=2025.1",
    "uvicorn>=0.34.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.10", # Changed from psycopg2
    "pyjwt>=2.10.1",
    "numpy>=1.20.0", # Added numpy
]

[tool.uv.sources.pypi]
url = "https://pypi.org/simple"

[tool.pytest.ini_options]
addopts = "--doctest-modules --strict-markers"
pythonpath = ["."]

[dependency-groups]
dev = [
    "anyio>=4.8.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.1.1",
    "pytest-tornasync>=0.6.0.post2",
]

[tool.setuptools.packages.find]
include = ["backend*"]
